[tool.poetry]
name = "repl_nix_Elsa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "2.0.106"
pymongo = "4.4.1"
umongo = "3.1.0"
motor = "3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
